# tmux-layout-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
benches/: config_parse.rs
examples/config/: .tmux-layout.toml  .tmux-layout.yml  single-window.toml  splits.toml
src/: cli.rs  cwd.rs  lib.rs  main.rs
src/config/: includes.rs  loader.rs  mod.rs  model.rs
src/tmux/: command.rs  import.rs  layout.rs  mod.rs
