[package]
name = "tmux-layout"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
shellexpand = "3.1"
clap = "4"
colored = "3.0"
nom = "7.1"
shellwords = "1.1"
color-eyre = { version = "0.6", default-features = false }
thiserror = "2.0"
dirs = "5.0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "config_parse"
harness = false

[profile.release]
#debug = true
