[package]
name = "tmux-layout"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "A tool for managing tmux sessions with predefined layouts"
homepage = "https://github.com/dsmatter/tmux-layout-rs"
repository = "https://github.com/dsmatter/tmux-layout-rs"
readme = "README.md"
keywords = ["cli", "tmux", "layout", "management", "productivity"]
categories = ["command-line-utilities"]
exclude = [".github", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
shellexpand = "3.1"
clap = "4"
colored = "3.0"
nom = "8.0"
shellwords = "1.1"
color-eyre = { version = "0.6", default-features = false }
thiserror = "2.0"
dirs = "6.0.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "config_parse"
harness = false

[profile.release]
#debug = true
